<resources>
    <string name="com_auth0_client_id">gP9lxqKBuMdLrBvYHuw3D3j2xkT0nC2B</string>
    <string name="com_auth0_domain">dev-mnno4iqugjctzbkb.us.auth0.com</string>

    <string name="app_name">DiabetesApp</string>
    <string name="title_home">Основное</string>
    <string name="title_reports">Отчеты</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title_diary">Дневник</string>
    <string name="avgGlucoseAnnotation">Среднее</string>
    <string name="minGlucoseAnnotation">Минимум</string>
    <string name="maxGlucoseAnnotation">Максимум</string>
    <string name="carbsAnnotation">Углеводы</string>
    <string name="caloriesAnnotation">Калории</string>
    <string name="insulinAnnotation">Инсулин</string>
    <string name="title_more">Дополнительно</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>