<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whisper_gray"
    tools:context="com.ordresot.diabetessupporter.presentation.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="40dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="40dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/glucoseChartContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/glucoseChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/hba1cContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/glucoseChartContainer"
                app:layout_constraintVertical_bias="0">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:text="Расчетное значение HbA1c"
                    android:textColor="@color/charcoal_gray"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical | end"
                    android:layout_marginVertical="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="--"
                    android:textColor="@color/charcoal_gray"/>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/todayDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Сегодня"
                android:textColor="@color/dim_gray"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/hba1cContainer" />

            <LinearLayout
                android:id="@+id/avgGlucoseContainer"
                style="@style/activityHomeRoundValueContainer"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toStartOf="@id/minGlucoseContainer"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/todayDescriptionText">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/avgGlucoseVal"
                    style="@style/activityHomeRoundValue"
                    android:text="--" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/activityHomeRoundValueMeasurement"
                    android:text="ммоль/л" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/activityHomeRoundValueAnnotation"
                android:text="@string/avgGlucoseAnnotation"
                app:layout_constraintEnd_toEndOf="@id/avgGlucoseContainer"
                app:layout_constraintStart_toStartOf="@id/avgGlucoseContainer"
                app:layout_constraintTop_toBottomOf="@id/avgGlucoseContainer" />

            <LinearLayout
                android:id="@+id/minGlucoseContainer"
                style="@style/activityHomeRoundValueContainer"
                app:layout_constraintEnd_toStartOf="@id/maxGlucoseContainer"
                app:layout_constraintStart_toEndOf="@id/avgGlucoseContainer"
                app:layout_constraintTop_toTopOf="@id/avgGlucoseContainer">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/minGlucoseVal"
                    style="@style/activityHomeRoundValue"
                    android:text="--" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/activityHomeRoundValueMeasurement"
                    android:text="ммоль/л" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/activityHomeRoundValueAnnotation"
                android:text="@string/minGlucoseAnnotation"
                app:layout_constraintEnd_toEndOf="@id/minGlucoseContainer"
                app:layout_constraintStart_toStartOf="@id/minGlucoseContainer"
                app:layout_constraintTop_toBottomOf="@id/minGlucoseContainer" />

            <LinearLayout
                android:id="@+id/maxGlucoseContainer"
                style="@style/activityHomeRoundValueContainer"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toEndOf="@id/minGlucoseContainer"
                app:layout_constraintTop_toTopOf="@id/avgGlucoseContainer">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/maxGlucoseVal"
                    style="@style/activityHomeRoundValue"
                    android:text="--" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/activityHomeRoundValueMeasurement"
                    android:text="ммоль/л" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/activityHomeRoundValueAnnotation"
                android:text="@string/maxGlucoseAnnotation"
                app:layout_constraintEnd_toEndOf="@id/maxGlucoseContainer"
                app:layout_constraintStart_toStartOf="@id/maxGlucoseContainer"
                app:layout_constraintTop_toBottomOf="@id/maxGlucoseContainer" />

            <LinearLayout
                android:id="@+id/carbsContainer"
                style="@style/activityHomeRoundValueContainer"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toStartOf="@id/caloriesContainer"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/avgGlucoseContainer">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/carbsVal"
                    style="@style/activityHomeRoundValue"
                    android:text="--" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/activityHomeRoundValueMeasurement"
                    android:text="г" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/activityHomeRoundValueAnnotation"
                android:text="@string/carbsAnnotation"
                app:layout_constraintEnd_toEndOf="@id/carbsContainer"
                app:layout_constraintStart_toStartOf="@id/carbsContainer"
                app:layout_constraintTop_toBottomOf="@id/carbsContainer" />

            <LinearLayout
                android:id="@+id/caloriesContainer"
                style="@style/activityHomeRoundValueContainer"
                app:layout_constraintEnd_toStartOf="@id/insulinContainer"
                app:layout_constraintStart_toEndOf="@id/carbsContainer"
                app:layout_constraintTop_toTopOf="@id/carbsContainer">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/caloriesVal"
                    style="@style/activityHomeRoundValue"
                    android:text="--" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/activityHomeRoundValueMeasurement"
                    android:text="ккал" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/activityHomeRoundValueAnnotation"
                android:text="@string/caloriesAnnotation"
                app:layout_constraintEnd_toEndOf="@id/caloriesContainer"
                app:layout_constraintStart_toStartOf="@id/caloriesContainer"
                app:layout_constraintTop_toBottomOf="@id/caloriesContainer" />

            <LinearLayout
                android:id="@+id/insulinContainer"
                style="@style/activityHomeRoundValueContainer"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toEndOf="@id/caloriesContainer"
                app:layout_constraintTop_toTopOf="@id/carbsContainer">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/insulinVal"
                    style="@style/activityHomeRoundValue"
                    android:text="--" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/activityHomeRoundValueMeasurement"
                    android:text="ЕД" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/activityHomeRoundValueAnnotation"
                android:text="@string/insulinAnnotation"
                app:layout_constraintEnd_toEndOf="@id/insulinContainer"
                app:layout_constraintStart_toStartOf="@id/insulinContainer"
                app:layout_constraintTop_toBottomOf="@id/insulinContainer" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/todayDiaryTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="Записи за сегодня"
                android:textColor="@color/dim_gray"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/carbsContainer" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/todayDiaryTitle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="75dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>